# openPipe

./: .gitignore  README  README.md  openPipe.json  pyproject.toml
docs/: HOUDINI_SETUP.md  NUKE_SETUP.md  USAGE.md
hou/: openPipe.json
hou/scripts/: 123.py  456.py
nuke/: init.py  menu.py
otls/: object_Globals.1.0.hda  object_td.Globals.1.7.hda  object_td.Globals.1.8.hda  object_td.Globals.1.9.hda  sop_File.1.0.hda  sop_FileCache.1.0.hda  sop_td.File.1.12.hda  sop_td.FileCache.1.16.hda  sop_td.Megascan.1.4.hda  sop_td.Megascan.1.5.hda
python3.10libs/: file.cp310-win_amd64.pyd  filecache.cp310-win_amd64.pyd  globals.cp310-win_amd64.pyd  megascan.cp310-win_amd64.pyd
python3.11libs/: file.cp311-win_amd64.pyd  filecache.cp311-win_amd64.pyd  globals.cp311-win_amd64.pyd  megascan.cp311-win_amd64.pyd
python3.9libs/: file.cp39-win_amd64.pyd  filecache.cp39-win_amd64.pyd  globals.cp39-win_amd64.pyd  megascan.cp39-win_amd64.pyd
src/openpipe/cli/: Treeview.py  foo.py  hello.py
src/openpipe/core/: __init__.py  prod.py  test.py
src/openpipe/hou/: __init__.py  sample.py
src/openpipe/nuke/: __init__.py  sample.py
